# pc-stats-opc-ua-publisher

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/pc_stats_publisher/: __init__.py  config.py  main.py  metrics.py  server.py
